--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="group1">
         <div class="container group1__container" >
             <header class="header">                
-                    <img class="logo__img" src="img/logo.png" width="185" height="42" alt="your logo">
+                    <img class="logo__img" src="./img/logo.png" width="185" height="42" alt="your logo">
                     <div class="menu-burger">
                         <button class="menu-burger__btn">
                             <svg class="menu-burger__svg" width="40" height="21" viewBox="0 0 40 21" fill="none" xmlns="http://www.w3.org/2000/svg">
